load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "calibration_data",
    srcs = ["intrinsic_calibration.proto"],
)

cc_proto_library(
    name = "calibration_data_cc",
    deps = [":calibration_data"],
)

cc_library(
    name = "caibrator",
    srcs = ["calibrator.cc"],
    hdrs = ["calibrator.h"],
    deps = [
        ":calibration_data_cc",
        ":intrinsic_calibration",
        ":proto_utils",
        "//:opencv",
        "@absl//absl/status",
        "@glog",
        "@status_macros",
    ],
)

cc_library(
    name = "intrinsic_calibration",
    hdrs = ["intrinsic_calibration.h"],
    deps = [
        "//:opencv",
    ],
)

cc_library(
    name = "proto_utils",
    srcs = ["proto_utils.cc"],
    hdrs = ["proto_utils.h"],
    deps = [
        ":calibration_data_cc",
        ":intrinsic_calibration",
        "@absl//absl/status:statusor",
        "@absl//absl/strings",
    ],
)

cc_binary(
    name = "calibrator_cli",
    srcs = ["calibrator_cli.cc"],
    deps = [
        ":caibrator",
        "@absl//absl/flags:flag",
        "@absl//absl/flags:parse",
        "@absl//absl/status",
        "@gflags",
        "@glog",
        "@status_macros",
    ],
)
